<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".util.employeeView.JobApplicationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/applicationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="50dp"
                android:text="Application for [Job]"
                android:textColor="#2196F3"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/applicationNameBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:inputType="text"
                android:hint="Name"
                android:ems="11" />

            <EditText
                android:id="@+id/applicationPhoneBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:inputType="phone"
                android:hint="Phone"
                android:ems="11" />

            <EditText
                android:id="@+id/applicationEmailBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:ems="11" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/resumeUploadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:layout_marginHorizontal="10dp"
                    android:padding="10dp"
                    android:text="Upload Resume"
                    android:textColor="#757575"
                    android:backgroundTint="#D3E0EA"
                    app:cornerRadius="0dp" />

                <TextView
                    android:id="@+id/fileNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="#757575"
                    android:text="No file selected" />
            </LinearLayout>

            <Button
                android:id="@+id/applicationSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:text="Submit"
                android:backgroundTint="#2196f3" />

            <TextView
                android:id="@+id/applicationStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:textColor="#D90317"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>